--- a/MyOOP/src/main/webapp/class_style.css
+++ b/MyOOP/src/main/webapp/class_style.css
@@ -248,3 +248,21 @@ body {
 .search-field{
 	margin-bottom: 85px;
 }
+#tongthanhtoan{
+	background-color: red;
+	opacity:30%;
+}
+.button {
+  font: bold 11px Arial;
+  text-decoration: none;
+  background-color: #EEEEEE;
+  color: #333333;
+  padding: 2px 6px 2px 6px;
+  border-top: 1px solid #CCCCCC;
+  border-right: 1px solid #333333;
+  border-bottom: 1px solid #333333;
+  border-left: 1px solid #CCCCCC;
+}
+#userDetails{
+	
+}
